# llmGui

./: .gitignore  LICENSE  README.md  index.html  model-registry.json  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: detect_hardware.rs
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/config/: mod.rs
src-tauri/src/engine/: downloader.rs  mod.rs  process.rs  release_source.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/hardware/: dxgi.rs  memory_probe.rs  mod.rs  wmi_probe.rs
src-tauri/src/models/: mod.rs
src/api/: backend.ts  errorTranslation.ts  types.ts  updater.ts
src/components/advanced/: AdvancedPanel.tsx  LogsTab.tsx  ModelsTab.tsx  ParametersTab.tsx  advanced.css
src/components/chat/: Chat.tsx  chat.css  chatStorage.ts  chatTypes.ts  streamChat.ts
src/components/onboarding/: Onboarding.tsx  onboarding.css
src/components/shared/: LanguageSwitcher.tsx  SliderField.tsx  UpdateBanner.tsx  update-banner.css
src/i18n/: index.ts
src/i18n/locales/: de.json  en.json
src/state/: appState.ts  customModels.ts
